--- a/css/dark.css
+++ b/css/dark.css
@@ -106,7 +106,7 @@ pre {
 	max-width: 50%;
 }
 pre code {
-	background: #c5c4c4;
+	background: #ccc;
     border: 1px solid #ddd;
     border-left: 3px solid #f36d33;
     color: rgb(36, 36, 36);
@@ -120,4 +120,8 @@ pre code {
     padding: 0;
     display: block;
 	word-wrap: break-word;
+}
+
+h1, h2, h3, h4, h5, h6, strong {
+	color: #fff;
 }
